--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name"          : "hftp",
   "description"   : "a simple static http or ftp server.",
-  "homepage"      : "http://underscorejs.org",
+  "homepage"      : "http://www.runjf.com",
   "keywords"      : ["http", "static", "server", "ftp", "browser"],
   "author"        : "ruanjiefeng <ruanjiefeng@gmail.com>",
   "repository"    : {"type": "git", "url": "git@github.com:ruanjf/hftp.git"},
