--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "keywords"      : ["http", "static", "server", "ftp", "browser"],
   "author"        : "ruanjiefeng <ruanjiefeng@gmail.com>",
   "repository"    : {"type": "git", "url": "git@github.com:ruanjf/hftp.git"},
+  "dependencies": {
+    "mime": "~1.2.11",
+  },
   "main"          : "./lib/static_server.js",
   "bin"           : {"hftp": "./bin/hftp"},
-  "version"       : "0.0.5",
+  "version"       : "0.0.6",
   "licenses"      : "MIT"
 }
